# backend/docs/swagger.json
@@ -107,9 +107,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "login",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/entities.AuthUser"
                         }
                     },
                     "400": {
@@ -148,9 +148,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "login",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/entities.AuthUser"
                         }
                     },
                     "400": {
@@ -872,6 +872,17 @@
         }
     },
     "definitions": {
+        "entities.AuthUser": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "session_id": {
+                    "type": "string"
+                }
+            }
+        },
         "entities.Author": {
             "type": "object",
             "properties": {
